--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.0.0-beta3",
+    "firebase": "^8.4.3",
     "jquery": "^3.6.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
