--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.0-beta3",
     "jquery": "^3.6.0",
+    "prop-types": "^15.7.2",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-ga": "^3.3.0",
     "react-scripts": "2.1.1",
     "scrollreveal": "^4.0.9"
   },
